fixed card link buttons to be clickable and not overflowing anymore

--- a/src/Community.css
+++ b/src/Community.css
@@ -35,6 +35,7 @@
   margin: 50px 0;
   grid-gap: 50px 40px;
   display: grid;
+  position: relative;
 
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 }
